2011-07-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/modificar_agente.php: Added max-width to group 
	select in this view.
	* include/pchart_graph.php: Added more colors to combined
	graphs.
	
	Fixes: #3301605

2011-07-11  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php,
	  operation/reporting/reporting_xml.php: Fixed custom SQL reports.
	  safe_output was not properly called before executing que query.


2011-06-29  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_events.php,
	  operation/events/events_list.php,
	  operation/events/events.php: Merged from trunk. Improved event
	  behaviour.

2011-06-17  Ramon Novoa  <rnovoa@artica.es>

	* godmode/alerts/alert_actions.php: Merged from trunk. Aesthetic fix.

2011-06-17  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Fixed duplicated comments in
	event validation

2011-06-15 Javier Lanz <javier.lanz@artica.es>

	* include/functions_db.php: Deleted forgotten debugPrint calls
	* operation/agentes/estado_agente.php: Deleted forgotten debugPrint calls

2011-06-15 Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/alerts/alert_actions.php: fixed the url to copy the alert action.

2011-06-15  Ramon Novoa  <rnovoa@artica.es>

	* operation/events/events_list.php: Merged from trunk. Do not show
	  repeated comments when grouping events. Raise the maximum permitted
	  result length for GROUP_CONCAT.

2011-06-15  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Minor fixes to improve performance

2011-06-15  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php
	operation/events/events_list.php: Fixed insertion
	of repeated event comment

2011-06-14  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events.php: Fixed typo to fix the bug of
	multichange of event status when status are grouped

2011-06-13  Ramon Novoa  <rnovoa@artica.es>
