@@ -77,8 +77,12 @@ else {
 echo "<table cellpadding='4' cellspacing='4' class='databox' width='770'><tr>";
 echo "<td valign='top'>".__('Group')."</td>";
 echo "<td valign='top'>";
-
-print_select_groups(false, "AR", true, "ag_group", $ag_group, 'this.form.submit();', '', 0, false, false, true, '', false, 'width: 100px; max-width: 180px');
+$own_info = get_user_info($config['id_user']);
+if (!$own_info['is_admin'] && !give_acl ($config['id_user'], 0, "PM") && $collection_group == 0)
+	$return_all_group = false;
+else
+	$return_all_group = true;
+print_select_groups(false, "AR", $return_all_group, "ag_group", $ag_group, 'this.form.submit();', '', 0, false, false, true, '', false, 'width: 100px; max-width: 180px');
 
 echo "<td valign='top'>
 <noscript>
@@ -355,6 +359,7 @@ $(document).ready (function () {
 	$("#ag_group").click (
 	function () {
 		$(this).css ("width", "auto"); 
+		$(this).css ("min-width", "100px"); 
 	});
 	
 	$("#ag_group").blur (function () {
