@@ -1,5 +1,15 @@
 2011-07-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
+	* include/functions_html.php: Fixed function print_select_groups()
+	to retrieve subgroups with parent distinct than "group All".
+
+	Fixes: #3365845
+
+	godmode/agentes/modificar_agente.php: Fixed call to 
+	print_select_groups() to check user ACLs.
+
+2011-07-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
 	* godmode/agentes/modificar_agente.php: Added max-width to group 
 	select in this view.
 	* include/pchart_graph.php: Added more colors to combined
